nova_tests/plan101_1/negative/unused_prefix_neg.nv
// C8 — unused prefix generic `fn[T, X]` где X не используется → error.
//
// EXPECT_COMPILE_ERROR: [E_UNUSED_PREFIX_TYPEVAR]

module negative.unused_prefix_neg

fn[T, X] []T @bad(v T) -> T => v

test "should error" {
    assert(1 == 1)
}
